--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,12 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
   intl: ^0.16.1
+  sqflite: ^1.3.2+1
+  provider:
+  path:
+  fl_chart: ^0.12.2
+
+  device_preview: ^0.4.7
 
 dev_dependencies:
   flutter_test:
